--- a/contrib/extensions/distribution/core/pom.xml
+++ b/contrib/extensions/distribution/core/pom.xml
@@ -70,7 +70,25 @@
                         <Export-Package>
                             org.apache.sling.distribution.util
                         </Export-Package>
-                        <Embed-Dependency>httpasyncclient</Embed-Dependency>
+                        <Embed-Dependency>httpasyncclient,kryo,reflectasm,minlog,asm,objenesis</Embed-Dependency>
+                        <Embed-Transitive>true</Embed-Transitive>
+                        <Import-Package>
+                            <!--org.apache.lucene.*;resolution:=optional,-->
+                            <!--com.carrotsearch.*;resolution:=optional,-->
+                            <!--com.googlecode.*;resolution:=optional,-->
+                            <!--com.vividsolutions.jts.*;resolution:=optional,-->
+                            <!--com.sun.*;resolution:=optional,-->
+                            <!--jline;resolution:=optional,-->
+                            <!--org.apache.hadoop.*;resolution:=optional,-->
+                            <!--org.apache.regexp.*;resolution:=optional,-->
+                            <!--org.apache.log4j.*;resolution:=optional,-->
+                            <!--org.jboss.netty.*;resolution:=optional,-->
+                            <!--org.restlet.*;resolution:=optional,-->
+                            <!--org.joda.time.*;resolution:=optional,-->
+                            <!--org.eclipse.*;resolution:=optional,-->
+                            sun.*;resolution:=optional,
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
@@ -103,11 +121,17 @@
             <version>2.6.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.testing.resourceresolver-mock</artifactId>
+            <version>1.1.5-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
         <!-- SLING -->
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
-            <version>2.5.0</version>
+            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
@@ -238,6 +262,37 @@
             <version>2.0.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- kryo -->
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>reflectasm</artifactId>
+            <version>1.11.0</version>
+            <classifier>shaded</classifier>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>minlog</artifactId>
+            <version>1.3.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>5.0.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.objenesis</groupId>
+            <artifactId>objenesis</artifactId>
+            <version>2.1</version>
+        </dependency>
+
 
     </dependencies>
     <reporting>
